--- a/crates/channels-console/Cargo.toml
+++ b/crates/channels-console/Cargo.toml
@@ -18,6 +18,7 @@ prettytable-rs = { version = "0.10", default-features = false }
 tiny_http = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+regex = "1"
 crossterm = { version = "0.29", optional = true }
 ratatui = { version = "0.29", optional = true }
 clap = { version = "4.5", features = ["derive"], optional = true }
